# pathlib-ng

./: README.md  pyproject.toml
.github/workflows/: pathlib-ng.yml
pathlib_ng/: path.py
