[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathlib-ng"
version = "0.1.0"
description = "A lightweight, drop-in replacement for `pathlib.Path` with enhanced features, better error messages, and zero external dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Fkernel653"}
]
keywords = [
    "pathlib",
    "path",
    "filesystem",
    "file",
    "directory",
    "path-manipulation",
    "cross-platform",
    "utility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.hatch.build.targets.wheel]
packages = ["pathlib_ng"]
